# SomeOldCProjects

01.11.19/c_snake/: Makefile  c_snake.rar  start.bat  test.c
01.11.19/c_snake/data/: settings.txt
01.11.19/c_snake/sources/: snake.c
01.11.19/descriptor_test/: helloworld.c  numbers.txt  test.c
01.11.19/exec_test/sources/: diner_info.c  fork_test.c  getenv_test.c  my_exec_program.c
01.11.19/fork_beta/: Makefile  launch.bat
01.11.19/fork_beta/sources/: doughter.c
01.11.19/guard_log/: guard_log.c  test.c
01.11.19/hfsecurity/: Makefile  main.c  test.sln  test.vcxproj  test.vcxproj.filters.txt
01.11.19/hfsecurity/Debug/: vc142.idb
01.11.19/hfsecurity/Debug/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test.lastbuildstate
01.11.19/hfsecurity/headers/: header.c  header.h
01.11.19/hftraining_center/: Project1.sln  Project1.vcxproj  elliptical.c  hfcal.c  hfcal_UK.c
01.11.19/hftraining_center/includes/: hfcal.h
01.11.19/my_dict/sources/: my_dict.c
01.11.19/pipe_test/: Makefile  launch.bat
01.11.19/pipe_test/sources/: child_old.c  parent.c
01.11.19/sigaction_test/: main.c
01.11.19/test/: ansi.c  canal.txt  test  test.c
01.11.19/text_translator/: Makefile  launch.bat
01.11.19/text_translator/data/: input.txt  output.txt
01.11.19/text_translator/sources/: launch.c  text_translator_debug.c
20.11.19/CMake_test/: CMakeCache.txt  CMakeLists.txt  Makefile  MyScripts.cmake  cmake_install.cmake  lib.c  lib.h  main.c
20.11.19/CMake_test/cmake_folder/: CMakeCache.txt
20.11.19/CMake_test/cmake_folder/include/allegro5/internal/: aintern_acodec_cfg.h
20.11.19/CMake_test/sintax/: CMakeLists.txt
20.11.19/CMake_test2/CMakeFolder/: CMakeLists.txt  cmake_install.cmake
20.11.19/CMake_test2/lib/: mylib_static.lib
20.11.19/CMake_test2/sources/: main.c  mylib.c  mylib.h
20.11.19/HeadFirstTop10/: Makefile  main.c
20.11.19/allegro_test/CMakeFolder/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
20.11.19/allegro_test/sources/: main.c
20.11.19/ansi/: ansi.elf  main-for_elf.c  main.c
20.11.19/blasteroids/sources/: spaceship.c
20.11.19/gameInLife/: Makefile  compile.bat
20.11.19/gameInLife/sources/: main.c
20.11.19/test/: china.c  test.c
CMakeProject1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters.txt  CMakeCache.txt  CMakeProject1.cpp  CMakeProject1.vcxproj  CMakeProject1.vcxproj.filters.txt  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters.txt  cmake_install.cmake
allegro_test/: allegro_test.aps  allegro_test.rc  allegro_test.sln  allegro_test.vcxproj.filters.txt  resource.h
allegro_test/Debug/: allegro_test.ilk  allegro_test.res  vc142.idb
allegro_test/Debug/allegro_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  allegro_test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
allegro_test/sources/: part1.c  part2.c
beginners-C-program-examples-master/: Address of 1-D array(viewed).c  AllTempScalesConv(viewed).c  Anagram-Program-in-C(viewed).c  Area_of_Circle(viewed).c  BackgroundThreadSorter(viewed).c  Binary to decimal.c  BinarySearch(veiwed).c  BitwiseAndOperator(viewed).c  DisplayLinuxEnvirmentVariables(viewed).c  Largest(viewed).c  PalindromeNumber.c  PascalTriangle(viewed).c  Pointers(viewed).c  Prime(viewed).c  Recursion(viewed).c  RussianPeasantMultiplication(viewed).c  Separate(viewed).c  Structure(viewed).c  SwapIntegers(viewed).c  SwapValueWithoutUsingThirdVariable(viewed).c  Swap_1(viewed).c  Swap_2(viewed).c  Temperature(viewed).c  Trif(viewed).c  gcd(viewed).c
my_libs/: Makefile  libmy_lib.bat
my_libs/libmy_lib/: my_lib.c  my_lib.h  test.c
test/: test.sln  test.vcxproj
test/Debug/: test.ilk  vc142.idb
test/Debug/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test.lastbuildstate
test/Release/: HashTable.nativecodeanalysis.sarif  HashTable.nativecodeanalysis.xml  main.nativecodeanalysis.sarif  test.iobj  test.ipdb  vc.nativecodeanalysis.all.xml
test/Release/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  link.command.1.tlog  link.write.1.tlog  test.lastbuildstate  test.write.1u.tlog
xx.10.19/: Makefile  checksum.c  encrypt.c  enumtest.c  find.c  pool_puzzle.c  price_drinks.c  spies.c  test.c  test_code.c  test_cpp.cpp  test_drive.c  test_flight.c  tour.c  trip1.txt  turtle.c
